Clarify absolute difference explanation, Zoffix++

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1406,7 +1406,7 @@ Here is an excerpt of built-in smart-matching functionality:
 The X<approximately-equal operator>. Calculates the relative difference between
 the left-hand and right-hand sides and returns C<True> if the difference is
 less than $*TOLERANCE (which defaults to 1e-15). However, if either side is zero
-then it calculates the absolute difference between the non-zero side and $*TOLERANCE.
+then it checks that the absolute difference between the sides is less than $*TOLERANCE.
 Note that this operator is not arithmetically symetrical (doesn't do ± Δ):
 
     say ($x + $*TOLERANCE) =~= $x;   # True
