fix statement terminator in example

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -431,7 +431,7 @@ makes it available.
 =begin code
 # adding a multi candidate to an existing operator:
 multi infix:<+>(Int $x, "same") { 2 * $x };
-say 21 + "same",            # 42
+say 21 + "same";            # 42
 
 # defining a new operator
 sub postfix:<!>(Int $x where { $x >= 0 }) { [*] 1..$x };
