Mention \ isn't part of the option

--- a/Programs/00-running.pod
+++ b/Programs/00-running.pod
@@ -14,6 +14,8 @@ With no arguments, enters a REPL. With a C<[programfile]> or the C<-e>
 option, compiles the given program and by default also executes the
 compiled code.
 
+(Note: please ignore C<\> in the options list below)
+
 =table
   Option                Purpose
   ======                ==============================================
