--- a/Programs/01-debugging.pod
+++ b/Programs/01-debugging.pod
@@ -4,6 +4,19 @@
 
 =SUBTITLE Debug Perl 6 programs
 
-Info about debugging...
+There are at least two useful debuggers available for Rakudo:
+
+=item Debugger::UI::CommandLine 
+
+ A command-line debugger frontend for Rakudo.
+
+=item Grammar::Debugger 
+
+ Simple tracing and debugging support for Perl 6 grammars
+
+Please see the documentation for these programs for further information.
+
+Historically others have existed and others are likely to be written in future,
+check the L<Perl 6 Modules|https://modules.perl6.org/> website.
 
 =end pod
