state that sort returns a new list

--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -137,7 +137,7 @@ Examples:
 
 =head2 method sort
 
-Sorts iterables with C<infix:<cmp>> or given code object.
+Sorts iterables with C<infix:<cmp>> or given code object and returns a new C<List>.
 
 Examples:
 
