link from functions to Routine

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -17,6 +17,8 @@ list>, which specifies which, if any, arguments the signature expects. It can
 specify (or leave open) both the number and types of arguments, and also the
 return value.
 
+Introspection on subroutines is provided via L<C<Routine>|/type/Routine>.
+
 =head1 Defining/Creating/Using Functions
 
 =head2 X<Subroutines|declarator,sub>
