Fix build failure

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1392,7 +1392,7 @@ Here is an excerpt of built-in smart-matching functionality:
 
 =end table
 
-=head2 infix C«=~=»
+=head2 infix C<=~=>
 
     proto sub infix:<=~=>($, $) returns Bool:D is assoc:<chain>
     multi sub infix:<=~=>(Any, Any)
