Fix build failure
Seems X<> is not fully supported in =head directives.
Mirroring fix found elsewhere in the docs, by listing X<> before
the =head

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -426,7 +426,8 @@ However, this unpacking of objects as their attributes is only the default
 behavior. To make an object get destructured differently, change its
 L<C<Capture>> method.
 
-=head2 X<Long Names>
+X<|Long Names>
+=head2 Long Names
 
 To avoid to have some arguments to be considered for multiple dispatch
 separate them with a double semi-colon.
