--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -429,7 +429,7 @@ L<C<Capture>> method.
 X<|Long Names>
 =head2 Long Names
 
-To avoid to have some arguments to be considered for multiple dispatch
+To exclude certain parameters from being considered in multiple dispatch,
 separate them with a double semi-colon.
 
     multi sub f(Int $i, Str $s;; :$b) { dd $i, $s, $b };
