add example to junctions

--- a/Type/Junction.pod
+++ b/Type/Junction.pod
@@ -60,6 +60,9 @@ Usage examples:
     }
     my @primes_ending_in_1 = grep &is_prime & / 1$ /, 2..100;
     say @primes_ending_in_1;        # 11 31 41 61 71
+    
+    my @exclude = <~ .git>;
+    for dir(".") { say .Str if .Str.ends-with(none @exclude) }
 
 Special care should be taken when using C<all> with arguments that may
 produce an empty list:
