Added docs for Baggy.Bool. timotimo++

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -248,6 +248,19 @@ Returns zero.
     my $breakfast = bag <eggs bacon>;
     say $breakfast.default;                           # 0
 
+=head2 method Bool
+
+Defined as:
+
+    method Bool(Baggy:D:) returns Bool:D
+
+Returns C<True> if the invocant contains at least one element.
+
+    my $breakfast = ('eggs' => 1).BagHash;
+    say $breakfast.Bool;                              # True   (since we have one element)
+    $breakfast<eggs> = 0;                             # weight == 0 will lead to element removal
+    say $breakfast.Bool;                              # False
+
 =head2 method Set
 
 Defined as:
