--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1407,7 +1407,7 @@ The X<approximately-equal operator>. Calculates the relative difference between
 the left-hand and right-hand sides and returns C<True> if the difference is
 less than $*TOLERANCE (which defaults to 1e-15). However, if either side is zero
 then it checks that the absolute difference between the sides is less than $*TOLERANCE.
-Note that this operator is not arithmetically symetrical (doesn't do ± Δ):
+Note that this operator is not arithmetically symmetrical (doesn't do ± Δ):
 
     say ($x + $*TOLERANCE) =~= $x;   # True
     say ($x - $*TOLERANCE) =~= $x;   # False
