--- a/Programs/00-running.pod
+++ b/Programs/00-running.pod
@@ -65,62 +65,62 @@ attempts to document all those currently in use.
 
 =head2 Module Loading
 
-=item C<RAKUDOLIB>, C<PERL6LIB> (I<Str>; F<src/core/Inc.pm>)
+=item C<RAKUDOLIB>, C<PERL6LIB> (I<Str>; C<src/core/Inc.pm>)
 
   Appends a comma-delimited list of paths to C<@INC>. C<RAKUDOLIB> is evaluated first.
 
-=defn C<RAKUDO_MODULE_DEBUG> (I<Bool>; F<src/Perl6/ModuleLoader.pm>)
+=defn C<RAKUDO_MODULE_DEBUG> (I<Bool>; C<src/Perl6/ModuleLoader.pm>)
 Causes the module loader to print debugging information to standard error.
 
 
 =head2 Error Message Verbosity and Strictness
 
-=defn C<RAKUDO_NO_DEPRECATIONS> (I<Bool>; F<src/core/Deprecations.pm>)
+=defn C<RAKUDO_NO_DEPRECATIONS> (I<Bool>; C<src/core/Deprecations.pm>)
 If true, suppresses deprecation warnings triggered by the C<is DEPRECATED> trait.
 
-=defn C<RAKUDO_DEPRECATIONS_FATAL> (I<Bool>; F<src/core/Deprecations.pm>)
+=defn C<RAKUDO_DEPRECATIONS_FATAL> (I<Bool>; C<src/core/Deprecations.pm>)
 If true, deprecation warnings become thrown exceptions.
 
-=defn C<RAKUDO_VERBOSE_STACKFRAME> (I<UInt>; F<src/core/Backtrace.pm>)
+=defn C<RAKUDO_VERBOSE_STACKFRAME> (I<UInt>; C<src/core/Backtrace.pm>)
 Displays source code in stack frames surrounded by the specified number of lines of context.
 
-=defn C<RAKUDO_BACKTRACE_SETTING> (I<Bool>; F<src/core/Backtrace.pm>)
+=defn C<RAKUDO_BACKTRACE_SETTING> (I<Bool>; C<src/core/Backtrace.pm>)
 Controls whether .setting files are included in backtraces.
 
 
 =head2 Affecting Precompilation
 
-=defn C<RAKUDO_PREFIX> (I<Str>; F<src/core/CompUnit/RepositoryRegistry.pm>)
+=defn C<RAKUDO_PREFIX> (I<Str>; C<src/core/CompUnit/RepositoryRegistry.pm>)
 When this is set, Rakudo will look for the standard repositories (perl, vendor, site) in the
 specified directory. This is intended as an escape hatch for build-time bootstrapping issues,
 where Rakudo may be built as an unprivileged user without write access to the runtime paths
 in NQP's config.
 
-=defn C<RAKUDO_PRECOMP_DIST> (F<src/core/CompUnit/PrecompilationRepository.pm>)
+=defn C<RAKUDO_PRECOMP_DIST> (C<src/core/CompUnit/PrecompilationRepository.pm>)
 
-=defn C<RAKUDO_PRECOMP_LOADING> (F<src/core/CompUnit/PrecompilationRepository.pm>)
+=defn C<RAKUDO_PRECOMP_LOADING> (C<src/core/CompUnit/PrecompilationRepository.pm>)
 
-=defn C<RAKUDO_PRECOMP_WITH> (F<src/core/CompUnit/PrecompilationRepository.pm>)
+=defn C<RAKUDO_PRECOMP_WITH> (C<src/core/CompUnit/PrecompilationRepository.pm>)
 These are internal variables for passing serialized state to precompilation jobs in child processes.
 Please do not set them manually.
 
 =head2 Other
 
-=defn C<RAKUDO_ERROR_COLOR> (I<Bool>; F<src/core/Exception.pm>)
+=defn C<RAKUDO_ERROR_COLOR> (I<Bool>; C<src/core/Exception.pm>)
 Controls whether to emit ANSI codes for error highlighting. Defaults to true if unset, except on
 Win32.
 
-=defn C<RAKUDO_MAX_THREADS> (I<UInt>; F<src/core/ThreadPoolScheduler.pm>)
+=defn C<RAKUDO_MAX_THREADS> (I<UInt>; C<src/core/ThreadPoolScheduler.pm>)
 Override the default maximum number of threads used by a thread pool.
 
-=defn C<TMPDIR>, C<TEMP>, C<TMP> (I<Str>; F<src/core/IO/Spec/>)
+=defn C<TMPDIR>, C<TEMP>, C<TMP> (I<Str>; C<src/core/IO/Spec/>)
 The C<IO::Spec::Unix.tmpdir> method will return C<$TMPDIR> if it points to a directory with full
 access permissions for the current user, with a fallback default of C<'/tmp'>.
 
 C<IO::Spec::Cygwin> and C<IO::Spec::Win32> use more Win32-appropriate lists which also include the
 C<%TEMP%> and C<%TMP%> environment variables.
 
-=defn C<PATH>, C<Path> (I<Str>; F<src/core/IO/Spec/>)
+=defn C<PATH>, C<Path> (I<Str>; C<src/core/IO/Spec/>)
 The C<IO::Spec::Unix.path> method splits C<$PATH> as a shell would; i.e. as a colon-separated list.
 C<IO::Spec::Cygwin> inherits this from C<IO::Spec::Unix>.
 
