--- a/Type/IO/Socket/Async.pod
+++ b/Type/IO/Socket/Async.pod
@@ -99,7 +99,7 @@ should be C<close>d.
 
 Returns an initialised C<IO::Socket::Async> client object that is
 configured to send UDP messages using C<print-to> or C<write-to>.  The
-C<:broadcast> adverb will set the C<SO_BOADCAST> option which will allow
+C<:broadcast> adverb will set the C<SO_BROADCAST> option which will allow
 the socket to send packets to a broadcast address.
 
 =head2 method bind-udp
