--- a/Programs/01-debugging.pod
+++ b/Programs/01-debugging.pod
@@ -6,11 +6,11 @@
 
 There are at least two useful debuggers available for Rakudo:
 
-=item Debugger::UI::CommandLine 
+=item L<Debugger::UI::CommandLine|https://modules.perl6.org/repo/Debugger::UI::CommandLine>
 
  A command-line debugger frontend for Rakudo.
 
-=item Grammar::Debugger 
+=item L<Grammar::Debugger|https://modules.perl6.org/repo/Grammar::Debugger> (and C<Grammar::Tracer> in the same distribution)
 
  Simple tracing and debugging support for Perl 6 grammars
 
