Added docs for method 'pairs' in Baggy. moritz++

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -140,6 +140,20 @@ chosen elements from the invocant.
     my $random_dishes := $breakfast.roll(*);
     say $random_dishes[^5];                               # (bacon eggs bacon bacon bacon)
 
+=head2 method pairs
+
+Defined as:
+
+    method pairs(Baggy:D:) returns Seq:D
+
+Returns all elements and their respective weights as a L<Seq|/type/Seq> of C<Pair>s
+where the key is the element itself and the value is the weight of that element.
+
+    my $breakfast = bag <bacon eggs bacon>;
+    my $seq = $breakfast.pairs;
+    say $seq.sort;                                    # (bacon => 2 eggs => 1)
+
+
 =head2 method classify-list
 
 =comment TODO
