Added docs for Baggy.antipairs

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -153,6 +153,19 @@ where the key is the element itself and the value is the weight of that element.
     my $seq = $breakfast.pairs;
     say $seq.sort;                                    # (bacon => 2 eggs => 1)
 
+=head2 method antipairs
+
+Defined as:
+
+    method antipairs(Baggy:D:) returns Seq:D
+
+Returns all elements and their respective weights as a L<Seq|/type/Seq> of C<Pair>s
+where the element itself is the value and the weight of that element is the key, i.e.
+the opposite of method L<pairs|#method pairs>.
+
+    my $breakfast = bag <eggs bacon>;
+    my $seq = $breakfast.antipairs;
+    say $seq.sort;                                    # (1 => eggs 2 => bacon)
 
 =head2 method classify-list
 
