Stylistic improvements to Baggy.pod

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Collection of distinct weighted objects
 
-    class Baggy does QuantHash { }
+    role Baggy does QuantHash { }
 
 A role for collections of weighted objects.  See L<Bag>, L<BagHash>, and
 L<Mixy>.
@@ -159,7 +159,7 @@ Defined as:
 
     method antipairs(Baggy:D:) returns Seq:D
 
-Returns all elements and their respective weights as a L<Seq|/type/Seq> of C<Pair>s
+Returns all elements and their respective weights as a L<Seq|/type/Seq> of L<Pairs|/type/Pair>,
 where the element itself is the value and the weight of that element is the key, i.e.
 the opposite of method L<pairs|#method pairs>.
 
