Fixed broken code example. moritz++

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -163,7 +163,7 @@ Returns all elements and their respective weights as a L<Seq|/type/Seq> of L<Pai
 where the element itself is the value and the weight of that element is the key, i.e.
 the opposite of method L<pairs|#method pairs>.
 
-    my $breakfast = bag <eggs bacon>;
+    my $breakfast = bag <bacon eggs bacon>;
     my $seq = $breakfast.antipairs;
     say $seq.sort;                                    # (1 => eggs 2 => bacon)
 
