Iterable and QuantHash are roles

--- a/Type/Iterable.pod
+++ b/Type/Iterable.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Interface for container objects that can be iterated over
 
-    class Iterable { }
+    role Iterable { }
 
 C<Iterable> serves as an API for objects that can be iterated with the
 C<for> construct and related iteration constructs, like hyper operators.
