--- a/Type/QuantHash.pod
+++ b/Type/QuantHash.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Collection of objects represented as hash keys
 
-    class QuantHash does Associative { }
+    role QuantHash does Associative { }
 
 A C<QuantHash> represents a set of objects, represented as the keys of a
 C<Hash>. When asked to behave as a list it ignores its C<.values> and
