fix target option table

--- a/Programs/00-running.pod
+++ b/Programs/00-running.pod
@@ -43,16 +43,13 @@ Note that only boolean single-letter options may be bundled.
 The supported values for C<--target> are:
 
 =begin table
-
- Target     Backend  Description
- ======     =======  ===========
- parse      all      a representation of the parse tree
- ast        all      an abstract syntax tree (before optimizations)
- optimize   all      an abstract syntax tree (after optimizations)
-
- mbc        MoarVM   MoarVM byte code
- jar        JVM      JVM archive
-
+ Target   | Backend | Description
+ =========|=========|================================================
+ parse    |  all    |  a representation of the parse tree
+ ast      |  all    |  an abstract syntax tree (before optimizations)
+ optimize |  all    |  an abstract syntax tree (after optimizations)
+ mbc      |  MoarVM |  MoarVM byte code
+ jar      |  JVM    |  JVM archive
 =end table
 
 For C<--profile-filename>, specifying a name ending in C<.json> will write a raw JSON profile dump.
