--- a/Programs/00-running.pod
+++ b/Programs/00-running.pod
@@ -14,31 +14,32 @@ With no arguments, enters a REPL. With a C<[programfile]> or the C<-e>
 option, compiles the given program and by default also executes the
 compiled code.
 
-(Note: please ignore C<\> in the options list below)
+=begin code
 
-=table
-  Option                Purpose
-  ======                ==============================================
-  X<-c>                 check syntax only (runs BEGIN and CHECK blocks)
-  \--doc                extract documentation and print it as text
-  \-e program           one line of program, strict is enabled by default
-  \-h, --help           display this help text
-  \-n                   run program once for each line of input
-  \-p                   same as -n, but also print $_ at the end of lines
-  \-I path              adds the path to the module search path
-  \-M module            loads the module prior to running the program
-  \--target=[stage]     specify compilation stage to emit
-  \--optimize=[level]   use the given level of optimization (0..3)
-  \--encoding=[mode]    specify string encoding mode
-  \-o, --output=[name]  specify name of output file
-  \-v, --version        display version information
-  \--stagestats         display time spent in the compilation stages
-  \--ll-exception       display a low level backtrace on errors
-  \--profile            write profile information as HTML file (MoarVM)
-  \--profile-filename   provide a different filename (also allows .json)
-  \--doc=[module]       Use Pod::To::[module] to render inline documentation.
+  Option               Purpose
+  ======               ==============================================
+  -c                   check syntax only (runs BEGIN and CHECK blocks)
+  --doc                extract documentation and print it as text
+  -e program           one line of program, strict is enabled by default
+  -h, --help           display this help text
+  -n                   run program once for each line of input
+  -p                   same as -n, but also print $_ at the end of lines
+  -I path              adds the path to the module search path
+  -M module            loads the module prior to running the program
+  --target=[stage]     specify compilation stage to emit
+  --optimize=[level]   use the given level of optimization (0..3)
+  --encoding=[mode]    specify string encoding mode
+  -o, --output=[name]  specify name of output file
+  -v, --version        display version information
+  --stagestats         display time spent in the compilation stages
+  --ll-exception       display a low level backtrace on errors
+  --profile            write profile information as HTML file (MoarVM)
+  --profile-filename   provide a different filename (also allows .json)
+  --doc=[module]       Use Pod::To::[module] to render inline documentation.
 
 Note that only boolean single-letter options may be bundled.
+
+=end code
 
 The supported values for C<--target> are:
 
