Fixes for hard linking

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -90,7 +90,7 @@ The documentation for this can be found at
 L<https://doc.perl6.org/type/IO::Path#File_Test_operators>.
 
 There is more information on reading and writing files at
-L<https://doc.perl6.org/language/io>. Also, the section on C<open()>
+L<io|/language/io>. Also, the section on C<open()>
 below may be helpful.
 
 =head2 abs
@@ -316,7 +316,7 @@ C<my $deleted_value = @array[$i]:delete;>.
 
 Works similarly to the Perl 5 version, but Perl 6's Exception mechanism
 may give you more power and flexibility than is available in Perl 5.
-See L<https://doc.perl6.org/language/exceptions>. To omit the stacktrace
+See L<exceptions|/language/exceptions>. To omit the stacktrace
 and location, like Perl 5's C<die "...\n">, use:
 
     note "...";
@@ -615,7 +615,7 @@ may not be the best way to go for this.
 Was never a builtin function in Perl 5 in the first place. In Perl 6,
 typically, one declares functions as exportable or not, and all the
 exportable ones are exported. Nevertheless, selective importing is
-possible, but beyond the scope of this document. For details, see 
+possible, but beyond the scope of this document. For details, see
 L<https://doc.perl6.org/language/5to6-nutshell#Importing_specific_functions_from_a_module>.
 
 =head2 index
@@ -875,7 +875,7 @@ The most obvious change from Perl 5 is the file mode syntax. To open a
 file for reading only, you would say C<open("file", :r)>. For write-
 only, read-write, and append, you would use C<:w>, C<:rw>, and C<:a>
 respectively. There are also options for encoding and how the filehandle
-deals with newlines. Details at L<https://doc.perl6.org/routine/open>.
+deals with newlines. Details L<here|/routine/open>.
 
 =head2 opendir
 
@@ -911,7 +911,7 @@ The same in Perl 6.
 
 Available in Perl 6. The template options are currently more restricted
 than they are in Perl 5. The current documented list can be found at
-L<https://doc.perl6.org/routine/unpack>.
+L<unpack|/routine/unpack>.
 
 =head2 package
 
@@ -1022,7 +1022,7 @@ These survive the transition to Perl 6. Some notes:
     qw/.../ # is more commonly rendered as C<< <...> >> in Perl 6.
 
 There are some added quoting constructs and equivalents, as explained at
-L<https://doc.perl6.org/language/quoting>.
+L<quoting|/language/quoting>.
 
 =item qr/STRING/
 
@@ -1048,7 +1048,7 @@ that behavior. I. e. the Perl 5 C<rand(100)> is equivalent to
 C<100.rand> in Perl 6. Additionally, you can get a random integer by
 using something like C<(^100).pick>. For I<why> you are able to do that,
 see L<https://doc.perl6.org/language/operators#prefix_%5E> and
-L<https://doc.perl6.org/routine/pick>.
+L<pick|/routine/pick>.
 
 =head2 read
 
@@ -1072,7 +1072,7 @@ take a look at L<https://doc.perl6.org/type/IO::Path#routine_dir>.
 
 Not available in Perl 6. You most likely want to use the C<.lines>
 method in some way. For more detailed information on reading from files,
-see L<https://doc.perl6.org/language/io>.
+see L<io|/language/io>.
 
 =head2 readlink
 
@@ -1318,7 +1318,7 @@ C<sort> exists in Perl 6, but is somewhat different. C<$a> and C<$b> are
 no longer special (See L<5to6-perlvar>) and sort routines no
 longer return positive integers, negative integers, or 0, but rather
 C<Order::Increase>, C<Order::Same>, or C<Order::Decrease> objects. See
-L<https://doc.perl6.org/routine/sort> for details. May also be used as a
+L<sort|/routine/sort> for details. May also be used as a
 method I. e. C<sort(@a)> is equivalent to C<@a.sort>.
 
 =head2 splice
@@ -1358,7 +1358,7 @@ you wish to have the delimiters included in the resulting list, you need
 to use the named parameter C<:all>, like this: C<split(';', "a;b;c",
 :all) # a ; b ; c> Empty chunks are not removed from the result list as
 they are in Perl 5. For that behavior, see C<comb>. Details on C<split>
-are at L<https://doc.perl6.org/routine/split>. Unsurprisingly, C<split>
+are L<here|/routine/split>. Unsurprisingly, C<split>
 also now works as a method: C<"a;b;c".split(';')>
 
 =item split
@@ -1472,7 +1472,7 @@ C<@_> still contains what is passed to the function. So, in theory, you
 don't need to change that aspect of a function if porting from Perl 5 to
 Perl 6 (although you should probably consider the option of using a
 signature). For all the gory details, see
-L<https://doc.perl6.org/language/functions>.
+L<functions|/language/functions>.
 
 =head2 __SUB__
 
@@ -1527,8 +1527,8 @@ C<IO> classes somewhere.
 
 =item system PROGRAM LIST
 
-For this, you probably want C<run> (L<https://doc.perl6.org/routine/run>)
-or C<shell> (L<https://doc.perl6.org/routine/shell>).
+For this, you probably want (L<run|/routine/run>)
+or (L<shell routine|/routine/shell>).
 
 =head2 syswrite
 
@@ -1612,7 +1612,7 @@ Works as a function and a method. C<uc("ha")> and C<"ha".uc> both return "HA".
 =item ucfirst
 
 Perl 6 has done away with C<ucfirst>. The title case function C<tc> probably
-does what you need here. L<https://doc.perl6.org/routine/tc>
+does what you need here. L<tc|/routine/tc> function.
 
 =head2 umask
 
@@ -1650,8 +1650,8 @@ The zero argument (implicit C<$_>) version of unlink is not available in Perl
 =item unpack TEMPLATE
 
 Available in Perl 6. The template options are currently more restricted
-than they are in Perl 5. The current documented list can be found at
-L<https://doc.perl6.org/routine/unpack>.
+than they are in Perl 5. The current documented list can be found
+L<here|/routine/unpack>.
 
 
 =head2 unshift
@@ -1808,7 +1808,7 @@ not advised:
 
 C<warn> throws an exception. To simply print a message to C<$*ERR>, you
 would use the C<note> function. For more on exceptions, see
-L<https://doc.perl6.org/language/exceptions>.
+L<Exceptions|/language/exceptions>.
 
 =head2 write
 
