--- a/Language/5to6-perlop.pod
+++ b/Language/5to6-perlop.pod
@@ -19,7 +19,7 @@ equivalents, please see the Perl 6 documentation.
 =head1 SOURCES
 
 I'm taking my information from L<https://doc.perl6.org> (in particular,
-L<https://doc.perl6.org/language/operators>), supplemented by the
+L<operators|/language/operators>), supplemented by the
 design documents at L<https://design.perl6.org/> and input from the denizens
 of #perl6 on irc.freenode.org
 
@@ -235,7 +235,7 @@ C<orelse>.
 =head2 Quote and Quote-like Operators
 
 For all the gory details on quoting constructs, see
-L<https://doc.perl6.org/language/quoting>.
+L<quoting|/language/quoting>.
 
 There is a quoting operator that allows absolute literal strings: C<Q> or
 C<｢…｣>, although the latter might be difficult to find on your keyboard,
@@ -292,7 +292,7 @@ C<qq>.
 =head2 I/O Operators
 
 The full details on Input/Output in Perl 6 can be found at
-L<https://doc.perl6.org/language/io>.
+L<io|/language/io>.
 
 As C<< <...> >> is the quote-words construct in Perl 6, C<< <> >> is not
 used for reading lines from a file. You can do that by either making an
