--- a/Language/5to6-perlsyn.pod
+++ b/Language/5to6-perlsyn.pod
@@ -22,8 +22,8 @@ Perl 6 documentation.
 =head1 SOURCES
 
 I'm taking my information from L<http://doc.perl6.org> (in particular,
-L<http://doc.perl6.org/language/syntax> and
-L<http://doc.perl6.org/language/control>), supplemented by the design
+L<syntax|/language/syntax> and
+L<control flow|/language/control>), supplemented by the design
 documents at L<http://design.perl6.org/> and input from the denizens of
 #perl6 on irc.freenode.org
 
