--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -19,7 +19,7 @@ variables.
 
 =head1 SOURCES
 
-I'm taking my information from L<http://doc.perl6.org/language/variables>
+I'm taking my information from L<variables|/language/variables>
 supplemented by L<http://design.perl6.org/S28.html> and input from the
 denizens of #perl6 on irc.freenode.org
 
@@ -321,7 +321,7 @@ If you want to I<understand> why that works, you can look at these documents:
 
 =item L<http://doc.perl6.org/routine/%5B%20%5D#language_documentation_Operators>
 
-=item L<http://doc.perl6.org/type/Whatever>
+=item L<Whatever|/type/Whatever>
 
 ...and possibly
 
