--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -70,7 +70,7 @@ is the measure of how complete a Perl 6 implementation is.
 
 =head2 Is there a glossary of Perl 6 related terms?
 
-Yes, see L<glossary|https://doc.perl6.org/language/glossary>.
+Yes, see L<glossary|/language/glossary>.
 
 =head2 I'm a Perl 5 programmer. Where is a list of differences between Perl 5 and 6?
 
@@ -493,7 +493,7 @@ A short answer is that Rakudo is written almost entirely in Perl 6.  A more
 detailed answer is that Rakudo is written in a mixture of Perl 6 and NQP ("Not
 Quite Perl"). NQP is a lightweight Perl 6-like environment for virtual
 machines; it's designed to be a high-level way to create compilers and
-libraries for virtual machines (such as MoarVM and JVM) using Perl 6 syntax. 
+libraries for virtual machines (such as MoarVM and JVM) using Perl 6 syntax.
 
 =head2 What language is NQP written in?
 
