--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -628,7 +628,7 @@ L<Just-in-time compilation|https://en.wikipedia.org/wiki/Just-in-time_compilatio
 =head1 Junction
 
 A compound type that is transparent to many operations. See
-L<http://doc.perl6.org/type/Junction>.
+L<Junction|/type/Junction>.
 
 =head1 JVM
 
