Hard links were removed

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -87,7 +87,7 @@ The remaining filetests in Perl 5 do not appear to be implemented
 in Perl 6.
 
 The documentation for this can be found at
-L<https://doc.perl6.org/type/IO::Path#File_Test_operators>.
+L<File Test operators|/type/IO::Path#File_Test_operators>.
 
 There is more information on reading and writing files at
 L<io|/language/io>. Also, the section on C<open()>
@@ -167,7 +167,7 @@ still be useful.
 
 Not in Perl 6. For breaking out of C<given> blocks, you should probably take a
 look at C<proceed> and C<succeed>
-(L<https://doc.perl6.org/language/control#proceed_and_succeed>).
+L<here|/language/control#proceed_and_succeed>.
 
 =head2 caller
 
@@ -616,7 +616,7 @@ Was never a builtin function in Perl 5 in the first place. In Perl 6,
 typically, one declares functions as exportable or not, and all the
 exportable ones are exported. Nevertheless, selective importing is
 possible, but beyond the scope of this document. For details, see
-L<https://doc.perl6.org/language/5to6-nutshell#Importing_specific_functions_from_a_module>.
+L<this section|/language/5to6-nutshell#Importing_specific_functions_from_a_module>.
 
 =head2 index
 
@@ -781,7 +781,7 @@ operator still exists. If you're trying to rewrite some Perl 5 code, the
 most important difference is that C<=~> is replaced by the smart match
 operator, C<~~>. Similarly, C<!~> is replaced by C<!~~>. Options for
 regex operators are adverbs and are complicated. For details, see
-L<https://doc.perl6.org/language/regexes#Adverbs>
+L<Adverbs|/language/regexes#Adverbs>
 
 =head2 map
 
@@ -959,7 +959,7 @@ Works in Perl 6, and can also be used as a method. I. e. C<my $x = pop
 Not available in Perl 6. The closest equivalent is the C<:c> adverb,
 which defaults to C<$/.to> if C<$/> is true, and C<0> if it isn't. For
 information on C<:c>, see
-L<https://doc.perl6.org/language/regexes#Continue>.
+L<Continue|/language/regexes#Continue>.
 
 =head2 print
 
@@ -1047,7 +1047,7 @@ it an argument. You can, however, use it as a method on a number to get
 that behavior. I. e. the Perl 5 C<rand(100)> is equivalent to
 C<100.rand> in Perl 6. Additionally, you can get a random integer by
 using something like C<(^100).pick>. For I<why> you are able to do that,
-see L<https://doc.perl6.org/language/operators#prefix_%5E> and
+see L<^ operator|/language/operators#prefix_%5E> and
 L<pick|/routine/pick>.
 
 =head2 read
@@ -1064,7 +1064,7 @@ documented to exist at this time.
 =item readdir DIRHANDLE
 
 Not a builtin function. To iterate through the contents of a directory,
-take a look at L<https://doc.perl6.org/type/IO::Path#routine_dir>.
+take a look at L<dir routine|/type/IO::Path#routine_dir>.
 
 =head2 readline
 
@@ -1179,7 +1179,7 @@ substitution operator exists. If you're trying to rewrite some
 Perl 5 code, the most important difference is that C<=~> is replaced
 by the smart match operator, C<~~>. Similarly, C<!~> is C<!~~>.
 Options for regex operators are adverbs and are complicated. For
-details, see L<https://doc.perl6.org/language/regexes#Adverbs>
+details, see L<Adverbs page|/language/regexes#Adverbs>
 
 =head2 say
 
