--- a/Language/5to6-perlop.pod
+++ b/Language/5to6-perlop.pod
@@ -28,7 +28,7 @@ of #perl6 on irc.freenode.org
 The operator precedence table is somewhat different in Perl 6 than it is in
 Perl 5, so I will not detail it here. If you need to know the precedence and
 associativity of a given operator in Perl 6, refer to
-L<https://doc.perl6.org/language/operators#Operator_Precedence>.
+L<Operator Precedence|/language/operators#Operator_Precedence>.
 
 =head2 Terms and List Operators
 
@@ -45,7 +45,7 @@ dereference something, however, the arrow is the dot. It is also the dot
 for method calls. So, Perl 5's C<< $arrayref->[7] >> becomes
 C<$arrayref.[7]> in Perl 6 and, similarly, C<< $user->name >> becomes
 C<$user.name>. The C<< => >> arrow is used for constructing Pairs, see
-L<https://doc.perl6.org/language/terms#Pair>.
+L<Pair term documentation|/language/terms#Pair>.
 
 =head2 Auto-increment and Auto-decrement
 
@@ -202,7 +202,7 @@ The comma operator works mostly as expected, but technically it creates
 L<Lists|/type/List>) or separates arguments
 in function calls. Also, there is a C<:> variant that turns function
 calls into method calls - see
-L<https://doc.perl6.org/language/operators#infix_%3A>.
+L<this page|/language/operators#infix_%3A>.
 
 The C<< => >> operator works similarly to the Perl 5 "fat comma"
 behavior in that it allows an unquoted identifier on its left side, but
@@ -257,7 +257,7 @@ manner: C<< %a = 1 => 2, 3 => 4;say "%a[]"; >> results in a space
 separating the pairs and tabs separating the key from the value in each
 pair (apparently). You can also interpolate Perl 6 code in strings using
 curly braces. For all the details, see
-L<https://doc.perl6.org/language/quoting#Interpolation%3A_qq>.
+L<Interpolation|/language/quoting#Interpolation%3A_qq>.
 
 C<qw> works as in Perl 5, and can also be rendered as C<< <...> >>. E.
 g. C<qw/a b c/> is equivalent to C<< <a b c> >>.
