--- a/Language/5to6-perlsyn.pod
+++ b/Language/5to6-perlsyn.pod
@@ -97,7 +97,7 @@ until $x>.
 
 The big change from Perl 5 is that C<given> is not experimental or disabled by
 default in Perl 6. For the details on C<given> see
-L<http://doc.perl6.org/language/control#given>.
+L<this page|/language/control#given>.
 
 =head2 Loop Control
 
@@ -158,8 +158,8 @@ given EXPR {
 
 =end code
 
-The full details can be found at
-L<http://doc.perl6.org/language/control#given>.
+The full details can be found
+L<here|/language/control#given>.
 
 =head2 Goto
 
