--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -148,7 +148,7 @@ $^z)>. Ergo:
 =end code
 
 For more on placeholder variables, see
-L<http://doc.perl6.org/language/variables#The_%5E_Twigil>
+L<this page|/language/variables#The_%5E_Twigil>
 =item %ENV
 
 %ENV has been replaced by %*ENV in Perl 6. Note that the keys of this hash may
@@ -319,7 +319,7 @@ Does not exist in Perl 6, but you can get the same information using C<$/[*-
 
 If you want to I<understand> why that works, you can look at these documents:
 
-=item L<http://doc.perl6.org/routine/%5B%20%5D#language_documentation_Operators>
+=item L<[ ] routine|/routine/%5b%20%5d#language_documentation_operators>
 
 =item L<Whatever|/type/Whatever>
 
