--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -17,7 +17,7 @@ L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> by "profiling" as ex
 Expressions of the form C<now - INIT now>, where C<INIT> is a
 L<phase in the running of a Perl 6 program|/language/phasers>, provide a great idiom for timing code snippets.
 
-Use the C<m: your code goes here> L<#perl6 channel evalbot|http://doc.perl6.org/language/glossary#camelia>
+Use the C<m: your code goes here> L<#perl6 channel evalbot|/language/glossary#camelia>
 to write lines like:
 
     m: say now - INIT now
@@ -28,7 +28,7 @@ because the latter occurs during L<the INIT phase|/language/phasers#INIT>.
 
 =head2 Profile with C<prof-m: your code goes here>
 
-Enter C<prof-m: your code goes here> in the L<#perl6 channel|http://doc.perl6.org/language/glossary#IRC>
+Enter C<prof-m: your code goes here> in the L<#perl6 channel|/language/glossary#IRC>
 to invoke a Perl 6 compiler with a C<--profile> option.
 The evalbot's output includes a link to L<profile info|https://en.wikipedia.org/wiki/Profiling_(computer_programming)>:
 
@@ -85,8 +85,8 @@ Start by identifying the L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Kn
 =head2 Line by line
 
 A quick, fun, productive way to try improve code line-by-line is to collaborate with
-others using the L<#perl6|http://doc.perl6.org/language/glossary#IRC> evalbot
-L<camelia|http://doc.perl6.org/language/glossary#camelia>.
+others using the L<#perl6|/language/glossary#IRC> evalbot
+L<camelia|/glossary#camelia>.
 
 =head2 Routine by routine
 
