Same values in some links for a source and name were fixed

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -52,8 +52,8 @@ Perl 5's perlbrew and the equivalent Python and Ruby tools.
 
 The most reliable information is to be found either under the perl6.org domains or directly linked from it.
 
-L<https://www.perl6.org/documentation/|https://www.perl6.org/documentation/> with
-L<https://doc.perl6.org/|https://doc.perl6.org/> as the canonical technical reference.
+L<https://www.perl6.org/documentation/> with
+L<https://doc.perl6.org/> as the canonical technical reference.
 
 There is much good recent material on YouTube but be careful to check any dates
 on webpages since much of the Perl 6 information on random websites found by
@@ -74,7 +74,7 @@ Yes, see L<glossary|/language/glossary>.
 
 =head2 I'm a Perl 5 programmer. Where is a list of differences between Perl 5 and 6?
 
-See the pod with the 5to6- prefix under L<https://doc.perl6.org/language.html|https://doc.perl6.org/language.html>
+See the pod with the 5to6- prefix under L<https://doc.perl6.org/language.html>
 
 =head1 Modules
 
