--- a/Type/Channel.pod
+++ b/Type/Channel.pod
@@ -151,7 +151,7 @@ Usage:
 
 	CHANNEL.Supply
 
-This returns an C<on-demand> L<Supply|Supply> that emits a value for every value
+This returns an C<on-demand> L<Supply> that emits a value for every value
 received on the Channel. C<done> will be called on the C<Supply> when the L<Channel>
 is closed.
 
