--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -1580,8 +1580,7 @@ Not available in Perl 6.
 
 =item tr///
 
-Not well documented in this form, but seems to work similarly to how it
-does in Perl 5. The one caveat is that ranges are specified differently.
+Works similarly to how it does in Perl 5. The one caveat is that ranges are specified differently.
 Instead of using a range "a-z", you would use "a..z", i. e. with Perl's
 range operator. In Perl 6, C<tr///> has a method version, which is
 better documented, called C<.trans>. C<.trans> uses a list of pairs, as
