--- a/Type/Setty.pod
+++ b/Type/Setty.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Collection of distinct objects
 
-    class Setty does QuantHash { }
+    role Setty does QuantHash { }
 
 A role for collections which make sure that each element can only appear once.
 See L<Set> and L<SetHash>.
