Fix anchor link (Quantifier → Quantifier)

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -294,7 +294,7 @@ character classes:
 
 This first matches a quote, then any characters that aren't quotes, and then
 a quote again. The meaning of C<*> and C<+> in the examples above are
-explained in L<section Quantifier|#Quantifier>.
+explained in L<section Quantifier|#Quantifiers>.
 
 Just as you can use the C<-> for both set difference and negation of a
 single value, you can also explicitly put a C<+> in front:
