Correct number of horizontal lines in the formula

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -194,7 +194,7 @@ to calculate the difference is:
 
 =begin code
               |value - expected|
-⁣rel-diff = ──────────────────────
+⁣rel-diff = ────────────────────────
            max(|value|, |expected|)
 =end code
 
