Old 'http' links were replaced with 'https' versions. In examples too. Fix for https://github.com/perl6/doc/issues/616

--- a/Language/5to6-perlsyn.pod
+++ b/Language/5to6-perlsyn.pod
@@ -158,14 +158,14 @@ L<here|/language/control#given>.
 C<goto> I<probably> works similarly in Perl 6 to the way it does in Perl 5.
 However, as of this writing, it does not seem to be functional. For what is
 planned for C<goto>, see
-L<http://design.perl6.org/S04.html#The_goto_statement>.
+L<https://design.perl6.org/S04.html#The_goto_statement>.
 
 =head2 The Ellipsis Statement
 
 C<...> (along with C<!!!> and C<???>) are used to create stub
 declarations. This is a bit more complicated than the use of C<...> in
 Perl 5, so you'll probably want to look at
-L<http://design.perl6.org/S06.html#Stub_declarations> for the gory
+L<https://design.perl6.org/S06.html#Stub_declarations> for the gory
 details. That said, there doesn't seem to be an I<obvious> reason why it
 shouldn't still fulfill the role it did in Perl 5, despite its role
 being expanded in Perl 6.
@@ -182,6 +182,6 @@ the Perl 6 interpreter to check your pod. You can do this by using the
 C<--doc> switch. E. g. C<perl6 --doc Whatever.pod>. This will output any
 problems to standard error. (Depending on how/where you've installed
 perl6, you may need to specify the location of C<Pod::To::Text>.)
-Details on Perl 6 style pod is at L<http://design.perl6.org/S26.html>.
+Details on Perl 6 style pod is at L<https://design.perl6.org/S26.html>.
 
 =end pod
