--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -319,7 +319,7 @@ If you want to I<understand> why that works, you can look at these documents:
 
 ...and possibly
 
-=item L<http://design.perl6.org/S02.html#line_1126>
+=item L<https://design.perl6.org/S02.html#line_1126>
 
 ...though the design documents are not always up to date.
 
