--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -761,7 +761,7 @@ of an operator and operands that can be subexpressions or L<#value>s.
 Operators are an alternative syntax for a L<#multi-method>. With that
 syntax, what would be the L<argument|#Argument>s of the function are named
 operands instead. Operators are classified into
-L<categories|http://design.perl6.org/S02.html#Grammatical_Categories> of
+L<categories|https://design.perl6.org/S02.html#Grammatical_Categories> of
 categories.  A category has a precedence, an arity, and can be L<#fiddly>,
 L<#iffy>, L<#diffy>.  Perl 6 is very creative as to what is an operator, so
 there are many categories.  Operators are made of many tokens, possibly with
@@ -822,7 +822,7 @@ many in the L<#Perl Community>.
 =head1 POD
 
 B<P>lain B<O>l' B<D>ocumentation, a documentation format understood by Perl
-6. See L<S26|http://design.perl6.org/S26.html> for details.
+6. See L<S26|https://design.perl6.org/S26.html> for details.
 
 =head1 Property
 
