--- a/Language/io.pod
+++ b/Language/io.pod
@@ -164,7 +164,7 @@ Use C<rmdir> to remove I<empty> directories:
 
 =begin comment
 TODO: base on https://github.com/perl6/specs/blob/master/S32-setting-library/IO.pod?
-TODO: http://doc.perl6.org/type/IO::Handle has close but no open
+TODO: https://doc.perl6.org/type/IO::Handle has close but no open
 =end comment
 
 =end pod
