--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -485,7 +485,7 @@ writing/test modules at L<Modules Extra|/language/modules-extra>
 
 =head1 The Future of Ecosystem
 
-L<http://modules.perl6.org> and github-based infrastructure is temporary. The
+L<https://modules.perl6.org> and github-based infrastructure is temporary. The
 plan is to establish something similar to Perl 5's PAUSE/CPAN/MetaCPAN
 infrastructure. B<Volunteers needed!>
 
