--- a/Language/mop.pod
+++ b/Language/mop.pod
@@ -110,7 +110,7 @@ The presence of a C<Scalar> object indicates that the object is "itemized".
 
 B<Note:> this documentation largely reflects the meta object system as
 implemented by the L<Rakudo Perl 6 compiler|http://rakudo.org/>, since the
-L<design documents|http://design.perl6.org/> are very light on details.
+L<design documents|https://design.perl6.org/> are very light on details.
 
 For each type declarator keyword, such as C<class>, C<role>, C<enum>,
 C<module>, C<package>, C<grammar> or C<subset>, there is a separate meta
