--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -105,7 +105,7 @@ previously existing set of definitions then you probably just made your code tha
 =head2 Speed up type-checks and call resolution
 
 Most L<C<where> clauses|/type/Signature#Type_Constraints> -- and thus most
-L<subsets|http://design.perl6.org/S12.html#Types_and_Subtypes> -- force dynamic (run-time)
+L<subsets|https://design.perl6.org/S12.html#Types_and_Subtypes> -- force dynamic (run-time)
 type checking and call resolution for any call it I<might> match. This is slower, or at least later,
 than compile-time.
 
@@ -153,7 +153,7 @@ programming that someone else has done for you, and the upshot is that you can c
 L<use Perl 5 modules in Perl 6|http://stackoverflow.com/a/27206428/1077672>.
 
 More generally, Perl 6 is designed for smooth interop with other languages and there are a number
-of L<modules aimed at providing convenient use of libs from other langs|http://modules.perl6.org/#q=inline>.
+of L<modules aimed at providing convenient use of libs from other langs|https://modules.perl6.org/#q=inline>.
 
 =head2 Make the Rakudo compiler generate faster code
 
