--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -440,7 +440,7 @@ See the L<Signatures|/type/Signature> documentation for more about signatures.
     my Int $x where * > 3 = 7;      # same constraint, but using L<Whatever> short-hand
 
 See L<Variable Declarators and
-Scope|http://docs.perl6.org/language/variables#Variable_Declarators_and_Scope>
+Scope|/language/variables#Variable_Declarators_and_Scope>
 for more details on other scopes (our, has).
 
 =head3 Subroutine declaration
@@ -476,7 +476,7 @@ You can declare a unit of things without explicit curly brackets.
 
 =head3 Multi-dispatch declaration
 
-See also L<Multi-dispatch|http://docs.perl6.org/language/functions#Multi-dispatch>.
+See also L<Multi-dispatch|/language/functions#Multi-dispatch>.
 
 Subroutines can be declared with multiple signatures.
 
