--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -272,7 +272,7 @@ prints
 
     Initiate a specified spell normally (do not use for class 7 spells)
 
-See the L<documentation specification|http://design.perl6.org/S26.html> for
+See the L<documentation specification|https://design.perl6.org/S26.html> for
 details about attaching Pod to variables, classes, functions, methods, etc.
 
 =head2 trait is export
