--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -532,8 +532,8 @@ Special case:  sprintf("<b>%s</b>\n", "Perl 6")  will not work use either of the
 
 Returns C<True> if the invocant is identical to or starts with C<$needle>.
 
-    say "Hello, World".starts-with("Hello");    # True
-    say "http://perl6.org/".starts-with('ftp'); # False
+    say "Hello, World".starts-with("Hello");     # True
+    say "https://perl6.org/".starts-with('ftp'); # False
 
 =head2 method ends-with
 
